--- a/public_html/Aula 01, 14-08-2018/Exercicio02/cursos/curso.html
+++ b/public_html/Aula 01, 14-08-2018/Exercicio02/cursos/curso.html
@@ -11,10 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-
-    <center> <h1>Cursos</h1> <br><br> </center>
-    <p><b>Cursos: </b> Ciência da Computação, Cursando...</p>
-
-
-</body>
+      
+            <center> <h1>Cursos</h1> <br><br> </center>
+            <p><b>Cursos: </b> Ciência da Computação, Cursando...</p>
+        
+            <p><a href="../index.html"> Voltar </a></p>
+    </body>
 </html>
