--- a/public_html/Aula 01, 14-08-2018/index.html
+++ b/public_html/Aula 01, 14-08-2018/index.html
@@ -11,6 +11,7 @@
         <h5>Quinto</h5>
         <h6>Sexto</h6>  
   
+        <p> Meu nome é Thiago </p>
         <p> TESTE </p>
         
         <hr></hr>
