--- a/public_html/Aula 01, 14-08-2018/Exercicio02/fotos/album.html
+++ b/public_html/Aula 01, 14-08-2018/Exercicio02/fotos/album.html
@@ -15,9 +15,9 @@ and open the template in the editor.
             <center> <h1>Album de Fotos</h1> <br><br> </center>
             
            <ul>
-               <li><p><b>Foto 1</b></p><img src="foto01.jpg" alt="foto01" width="150" height="150" /></li>
+               <li><p><b>Foto 1</b></p><img src="01.jpg" alt="foto01" width="150" height="150" /></li>
          <!-- <img src="foto01.jpg" alt="foto01" width="150" height="150" /><li> -->
-               <li><p><b>Foto 2</b></p><img src="foto02.jpg" alt="foto02" width="150" height="150" /></li>
+               <li><p><b>Foto 2</b></p><img src="02.jpg" alt="foto02" width="150" height="150" /></li>
          <!--  <img src="foto02.jpg" alt="foto02" width="150" height="150" /><li> -->      
            </ul>
             
