--- a/public_html/Aula 02, 21-08-2018/Exercicio02/notas.html
+++ b/public_html/Aula 02, 21-08-2018/Exercicio02/notas.html
@@ -73,6 +73,6 @@ and open the template in the editor.
             
           
         </div>
-        <p><a href="index.html"> Voltar </a></p>  
+        <p><a href="index2.html"> Voltar </a></p>  
     </body>
 </html>
