--- a/public_html/Aula 04, 04-09-2018/Exercicio02/index.html
+++ b/public_html/Aula 04, 04-09-2018/Exercicio02/index.html
@@ -22,26 +22,26 @@ and open the template in the editor.
             <center><th>nome</th></center>
             <center><th>nota</th></center>
             <tr>
-                <td>26090787</td>
-                <td>Eldiran Alexandre</td>
+                <td>26148808</td>
+                <td>Giuseppe Sued</td>
                 <td>10</td>
             </tr>
 
             <tr>
-                <td>2678687</td>
-                <td>João Pedro</td>
-                <td>10</td>
+                <td>26481548</td>
+                <td>Pedro Paulo</td>
+                <td>5</td>
             </tr>
 
             <tr>
                 <td>2678687</td>
-                <td>Euclides Junior</td>
+                <td>Marcos Gabriel</td>
                 <td>10</td>
             </tr>
 
             <tr>
-                <td>2678687</td>
-                <td>Anderson Sampaio</td>
+                <td>2458468</td>
+                <td>tiago joao</td>
                 <td>8,5</td>
             </tr>
 
