--- a/public_html/Aula 04, 04-09-2018/index.html
+++ b/public_html/Aula 04, 04-09-2018/index.html
@@ -34,12 +34,12 @@ and open the template in the editor.
         
         <div>
             
-            <p id="teste">Thiago Dias.</p>
-            <p>Thiago Dias.</p>  
+            <p id="teste">Giuseppe  </p>
+            <p>Gisueppe Sued.</p>  
         <div>
 
             <p> Minha primeira página em CSS! </p>
-            <span>Thiago Dias</span>
+            <span>Giuseppe</span>
             <p id="postagens"> Minhas Postagens. </p>
 
         </div>
@@ -48,7 +48,7 @@ and open the template in the editor.
         <div class="conteudos">
 
             <p> Minha primeira página em CSS! </p>
-            <span>Thiago Dias</span>
+            <span>SUED</span>
             <p> Minhas Postagens. </p>
 
         </div>
@@ -56,7 +56,7 @@ and open the template in the editor.
         <div class="perfil">
 
             <p> Conteudo da Pagina! </p>
-            <span>bla bla bla</span>
+            <span>teste teste teste</span>
             <p> Todos os direitos reservados. </p>
 
         </div>
