--- a/public_html/Aula 02, 21-08-2018/Exercicio02/frequencias.html
+++ b/public_html/Aula 02, 21-08-2018/Exercicio02/frequencias.html
@@ -51,7 +51,7 @@ and open the template in the editor.
 
 
 
-            <p><a href="index.html"> Voltar </a></p>
+            <p><a href="index2.html"> Voltar </a></p>
         </div>
     </body>
 </html>
